# zkevm-circuits

./: Cargo.toml
aggregator/: Cargo.toml
docs/: Keccak_Circuit.md
eth-types/: Cargo.toml
eth-types/src/: geth_types.rs  lib.rs  sign_types.rs  utils.rs
zkevm-circuits/: Cargo.toml
zkevm-circuits/src/: mpt_circuit.rs  poseidon_circuit.rs  state_circuit.rs  table.rs  tx_circuit.rs
zkevm-circuits/src/sha256_circuit/: test.rs
zkevm-circuits/src/witness/: mpt.rs
zkevm-circuits/src/witness/mpt/: test.rs  witness.rs
zktrie/: Cargo.toml
zktrie/src/: lib.rs  state.rs
zktrie/src/state/: builder.rs
